--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,33 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-# test
+# `dependabot.yml` file with customized Bundler configuration
+# In this example, the name of the group is `dev-dependencies`, and
+# only the `patterns` and `exclude-patterns` options are used.
+# Grouping rules apply to version updates only.
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Keep bundler dependencies up to date
+  - package-ecosystem: "bundler"
+    directories:
+      - "/frontend"
+      - "/backend"
+      - "/admin"
     schedule:
       interval: "weekly"
+    # Create a group of dependencies to be updated together in one pull request
+    groups:
+       # Specify a name for the group, which will be used in pull request titles
+       # and branch names
+       dev-dependencies:
+          # Define patterns to include dependencies in the group (based on
+          # dependency name)
+          applies-to: version-updates # Applies the group rule to version updates
+          patterns:
+            - "rubocop" # A single dependency name
+            - "rspec*"  # A wildcard string that matches multiple dependency names
+            - "*"       # A wildcard that matches all dependencies in the package
+                        # ecosystem. Note: using "*" may open a large pull request
+          # Define patterns to exclude dependencies from the group (based on
+          # dependency name)
+          exclude-patterns:
+            - "gc_ruboconfig"
+            - "gocardless-*"
